--- a/index.html
+++ b/index.html
@@ -13,4 +13,6 @@
 <body>
 <canvas id="webgl"></canvas>
 <main id="app"></main>
-<script src="script.js" type
+<script src="script.js" type="module"></script>
+</body>
+</html>
